@@ -1,4 +1,5 @@
 0.10
+ - Add doc for Wikibase::Datatype::Print::Lexeme.
 
 0.09 2023-04-21T21:13:56+02:00
  - Add doc for Wikibase::Datatype::Print::Form.
